# langchain-v1-mastery

./: main.py  pyproject.toml
src/: 1-langchain_intro.ipynb  2-model_integration.ipynb  3-streaming_response.ipynb  4-batching.ipynb  5-tools.ipynb  6-structured_output.ipynb
src/configs/: model_config.py
